--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "Arpan Neupane",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2"
+    "axios": "^1.13.2",
+    "body-parser": "^2.2.1",
+    "express": "^4.21.2",
+    "express-validator": "^7.3.1",
+    "moment-timezone": "^0.6.0",
+    "node-cron": "^4.2.1"
   }
 }
