--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "express-vercel-deployment",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "server.js",  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server"
@@ -17,5 +17,11 @@
     "moment-timezone": "^0.6.0",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.11"
-  }
+  },
+  "cron": [
+    {
+      "path": "/api/autoBookSeats",
+      "schedule": "*/10 * * * * *"
+    }
+  ]
 }
